# endless-runner

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.ps1  dist  install-deps.LINUX.sh  install-deps.WINDOWS.ps1  install-deps.sh  run  run.ps1
.github/workflows/: release.yml
.run/: endless.run.xml
old/: background.c  defs.h  fade.h  gui.h  main.c  math.c  obstacle.c  particles.c  particles.h  player.c
sources/: background.c  background.h  gui.c  gui.h  main.c  main.h  meth.c  meth.h  obstacle.c  obstacle.h  particle.c  particle.h  player.c  player.h
src/: CMakeLists.txt  background.c  background.h  defs.h  endless.h  fade.c  gui.c  gui.h  main.c  main.h  math.c  math.h  obstacle.c  obstacle.h  particles.c  particles.h  player.c  player.h  structs.h
